Revert "Look for SpringDevTools when checking if reload is enabled. Fixes #11275"
This reverts commit d9a422d13209308688610a120fa4b5a612dad017.