@@ -31,6 +31,7 @@ ext {
     groovyVersion = System.getenv('CI_GROOVY_VERSION') ?: "2.5.6"
     isBuildSnapshot = grailsVersion.endsWith(".BUILD-SNAPSHOT")
     isTravisBuild = System.getenv().get("TRAVIS") == 'true'
+    springLoadedCommonOptions = "-Xverify:none -Dspringloaded.synchronize=true -Djdk.reflect.allowGetCallerClass=true"
     dependencyVersions = [
         'javax.annotation-api': [
                 version: javaxAnnotationApiVersion,
@@ -83,6 +84,12 @@ ext {
             version: directoryWatcherVersion,
             group  : 'io.methvin',
             names  : ['directory-watcher'],
+            modules: ['']
+        ],
+        springLoaded: [
+            version: springLoadedVersion,
+            group  : 'org.springframework',
+            names  : ['springloaded'],
             modules: ['']
         ],
         async: [
